--- a/dungeon/rooms/templates/rooms/single_room.html
+++ b/dungeon/rooms/templates/rooms/single_room.html
@@ -3,3 +3,5 @@
 <p>Description: {{ room.door }}</p>
 {% for door in doors %}
     <p>{{ door.wall }}</p>
+    <p>{{ door.position }}</p>
+    <p>{{ door.room }}</p>
